--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,6 @@ jobs:
       - run: npm run build --if-present
       - name: Mysql test
         run: |
+          service mysql status
           sudo /etc/init.d/mysql start
           mysql -e 'CREATE DATABASE test_db;' -uroot -proot
