--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
      
       - run: npm run build --if-present
       - name: Mysql test
-        run: |
-          service mysql status
-          mysql -e 'CREATE DATABASE test_db;' -uroot -proot
+      - run: sudo service mysql start
+      - run: mysql -uroot -proot -e "SHOW DATABASES"
+      - run: mysql -uroot -proot -e "CREATE DATABASE test_db"
+      - run: mysql -uroot -proot -e "SHOW DATABASES"
